fix headline overflow and navbar padding

--- a/assets/custom.scss
+++ b/assets/custom.scss
@@ -12,6 +12,12 @@
   }
 }
 
+@media screen and (max-width: 500px) {
+  .game-title {
+    font-size: 2.5rem;
+  }
+}
+
 /**Navbar Styling**/
 .bg-darkblue {
   background-color: #1A1460;
@@ -171,8 +177,19 @@ body {
   background-color: #F4F5F1;
 }
 
+.nav-link {
+  padding-right: 0;
+  padding-left: 32px;
+}
+
 @media screen and (max-width: 600px) {
   .center-mobile {
     margin: 0 auto;
   }
+
+  .nav-link {
+    padding-right: 16px;
+    padding-left: 16px;
+  }
 }
+
